--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -24,6 +24,16 @@
         <br>
         <p class="prioridad1 prioridad2">Ultima linea...</p>
         <br>
+        <br>
+        <br>
+        <audio controls>
+            <source src="audios/musica.mp3" type="audio/mpeg">
+            Your browser does not support the <code>audio</code> tag.
+        </audio>
+        <video width="320" height="240" controls>
+            <source src="videos/torpedo.mp4" type="video/mp4">
+            Your browser does not support the <code>video</code> tag.
+        </video>
         <p>Ultima linea...</p>
         
     </body>
