--- a/src/main/resources/static/ejemplo6.html
+++ b/src/main/resources/static/ejemplo6.html
@@ -3,7 +3,7 @@
     <head>
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
-        
+        <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <a name="arriba"></a>
